--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -7,6 +7,7 @@ content:
   sources:
   - url: https://github.com/Klopfy/antora.git
     branches: HEAD
+    tags: [v1]
     # setting edit_url to false disables the Edit this Page link for any page that originates from this repository
     # the same thing can be achieved by adding empty credentials (i.e., @) in front of the domain in the URL
     #edit_url: false
