Add doc for build and ui bundle

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,27 +1,29 @@
 site:
   title: Personal Documentation Site
   # the 404 page and sitemap files only get generated when the url property is set
-  url: https://klopfy.ca/docs-site
+  #url: https://klopfy.ca/docs-site
   start_page: homelab::ansible.adoc
 content:
   sources:
   - url: https://github.com/Klopfy/antora.git
     branches: HEAD
-    tags: [v1]
-    # setting edit_url to false disables the Edit this Page link for any page that originates from this repository
-    # the same thing can be achieved by adding empty credentials (i.e., @) in front of the domain in the URL
-    #edit_url: false
+    tags: [alpha]
+  - url: https://gitlab.com/antora/antora.git
+    start_path: docs
+    branches: v3.1.x
+    edit_url: false
+
 asciidoc:
   attributes:
     experimental: ''
     idprefix: ''
     idseparator: '-'
     page-pagination: ''
+
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
-    snapshot: true
-  supplemental_files: ./supplemental-ui
+    url: ./ui-bundle.zip
+
 antora:
   extensions:
     - require: '@antora/lunr-extension'
